# simple-dino-app

./: .gitignore  Config
assets/scripts/: jetbot_bringup.sh
robot_ws/install/: local_setup.sh  setup.sh
robot_ws/install/dinoapp/lib/python2.7/dist-packages/: dinoapp-1.2.0.egg-info
robot_ws/install/dinoapp/share/dinoapp/: package.dsv  package.sh
robot_ws/install/dinoapp/share/dinoapp/cmake/: dinoappConfig.cmake
robot_ws/log/: latest_build
robot_ws/src/dinoapp/: CMakeLists.txt  package.xml
robot_ws/src/dinoapp/launch/: run.launch
robot_ws/src/dinoapp/nodes/: run  run.py
robot_ws/src/dinoapp/scripts/: run_dino.sh
robot_ws/src/jetbot_app/: CMakeLists.txt  package.xml
